--- a/bookings/templates/bookings/base.html
+++ b/bookings/templates/bookings/base.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <a class="navbar-brand" href="{% url 'home' %}">Restaurant Booking</a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'booking_list' %}">My Bookings</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'booking_create' %}">Make a Booking</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     
     <div class="container mt-4">
         {% block content %}
