--- a/bookings/templates/bookings/base.html
+++ b/bookings/templates/bookings/base.html
@@ -13,8 +13,14 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'booking_list' %}">My Bookings</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'booking_create' %}">Make a Booking</a></li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'booking_list' %}">My Bookings</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'booking_create' %}">Make a Booking</a></li>
+                        <li class="nav-item"><a class="nav-link btn btn-danger btn-sm text-white" href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link btn btn-primary btn-sm text-white" href="{% url 'login' %}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link btn btn-success btn-sm text-white" href="{% url 'register' %}">Register</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
