--- a/bookings/templates/bookings/home.html
+++ b/bookings/templates/bookings/home.html
@@ -1,9 +1,9 @@
 {% extends "bookings/base.html" %}
 
 {% block content %}
-    <div class="text-center">
-        <h1>Welcome to Our Restaurant</h1>
-        <p>Book your table now!</p>
-        <a href="{% url 'booking_create' %}" class="btn btn-primary">Make a Booking</a>
-    </div>
+<div class="container text-center">
+    <h1 class="mt-4">Welcome to Our Restaurant</h1>
+    <p class="lead">Book your table now and enjoy a great dining experience</p>
+    <a href="{% url 'booking_create' %}" class="btn btn-primary btn-lg">Make a Booking</a>
+</div>
 {% endblock %}
