--- a/bookings/static/css/styles.css
+++ b/bookings/static/css/styles.css
@@ -3,6 +3,9 @@ html, body {
     margin: 0;
     display: flex;
     flex-direction: column;
+    font-family: 'Georgia', serif;
+   
+    color: #2b2b2b;
 }
 .content-wrapper {
     flex: 1;
@@ -18,7 +21,7 @@ html, body {
     text-align: center;
 }
 footer {
-    background-color: #343a40;
+    background-color: #212830;
     color: white;
     padding: 15px 0;
     text-align: center;
@@ -26,3 +29,35 @@ footer {
     position: fixed;
     bottom: 0;
 }
+
+
+.navbar {
+    background-color: #212830;
+}
+
+.btn-outline-light {
+    border-radius: 50px;
+    padding: 0.75rem 2rem;
+    font-weight: 500;
+}
+
+.background-image {
+    background-image: url('/static/images/restaurant11.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    position: relative;
+}
+
+.blackback {
+    background-color: rgba(33, 40, 48, 0.70);
+    color: white;
+   
+}
+
+@media (max-width: 425px) {
+    .hide425 {
+      display: none;
+    }
+  }
