--- a/bookings/templates/bookings/base.html
+++ b/bookings/templates/bookings/base.html
@@ -12,7 +12,7 @@
 <body class="background-image">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
+            <a class="navbar-brand d-flex align-items-center " href="{% url 'home' %}">
                 <img src="{% static 'images/logo.png' %}" alt="Restaurant Logo" height="40" class="me-2">
                 <span>Restaurant Booking</span>
             </a>
@@ -21,14 +21,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link btn custom2-btn btn-sm text-white" href="{% url 'home' %}">Home</a></li>
                     {% if user.is_authenticated %}
-                        <li class="nav-item"><a class="nav-link" href="{% url 'booking_list' %}">My Bookings</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'booking_create' %}">Make a Booking</a></li>
-                        <li class="nav-item"><a class="nav-link btn btn-danger btn-sm text-white" href="{% url 'logout' %}">Logout</a></li>
+                        <li class="nav-item"><a class="nav-link btn custom2-btn btn-sm" href="{% url 'booking_list' %}">My Bookings</a></li>
+                        <li class="nav-item"><a class="nav-link btn custom2-btn btn-sm" href="{% url 'booking_create' %}">Make a Booking</a></li>
+                        <li class="nav-item"><a class="nav-link btn custom-btn btn-sm text-white" href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
-                        <li class="nav-item"><a class="nav-link btn btn-primary btn-sm text-white" href="{% url 'login' %}">Login</a></li>
-                        <li class="nav-item"><a class="nav-link btn btn-success btn-sm text-white" href="{% url 'register' %}">Register</a></li>
+                        <li class="nav-item"><a class="nav-link btn custom2-btn btn-sm text-white" href="{% url 'login' %}">Login</a></li>
+                        <li class="nav-item"><a class="nav-link btn custom2-btn btn-sm text-white" href="{% url 'register' %}">Register</a></li>
                     {% endif %}
                 </ul>
             </div>
