--- a/bookings/templates/bookings/base.html
+++ b/bookings/templates/bookings/base.html
@@ -35,7 +35,7 @@
         </div>
     </nav>
     <div class="background-image">
-    <div class="container mt-4 blackback">
+    <div class="container mt-4 blackback mb-4">
         {% block content %}
         {% endblock %}
     </div>
