--- a/bookings/templates/bookings/home.html
+++ b/bookings/templates/bookings/home.html
@@ -13,8 +13,8 @@
     <a href="{% url 'booking_create' %}" class="btn btn-outline-light btn-lg custom-btn">Make a Booking</a>
 
     <div class="mt-5 hide425">
-        <p class="text-muted">Walk-ins are not accepted. Bookings must be made in advance.</p>
-        <p class="text-muted">Limited tables available - secure your spot today.</p>
+        <p class=>Walk-ins are not accepted. Bookings must be made in advance.</p>
+        <p class=>Limited tables available - secure your spot today.</p>
     </div>
 </div>
 {% endblock %}
