--- a/bookings/templates/bookings/register.html
+++ b/bookings/templates/bookings/register.html
@@ -2,10 +2,10 @@
 
 {% block content %}
     <h2>Register</h2>
-    <form method="post">
+    <form method="post" class="padding">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Register</button>
+        <button type="submit" class="btn custom-btn">Register</button>
     </form>
-    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+    
 {% endblock %}
