Fixing home page

--- a/bookings/templates/bookings/home.html
+++ b/bookings/templates/bookings/home.html
@@ -4,6 +4,7 @@
 {% load static %}
 {% block content %}
 
+<div class=" blackback padding text-center">
 <div class="container text-center py-5">
     <img src="{% static 'images/logo.png' %}" alt="Restaurant Logo" height="80" class="mb-4">
 
@@ -16,5 +17,6 @@
         <p class=>Walk-ins are not accepted. Bookings must be made in advance.</p>
         <p class=>Limited tables available - secure your spot today.</p>
     </div>
+</div>
 </div>
 {% endblock %}
