--- a/bookings/static/css/styles.css
+++ b/bookings/static/css/styles.css
@@ -14,7 +14,7 @@ html, body {
     align-items: center;
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     color: white;
     text-align: center;
 }
@@ -82,3 +82,16 @@ footer {
  .padding {
     padding: 20px;
   }
+
+  .input-small {
+    width: 100%;
+    max-width: 250px;
+    min-width: 180px;
+    padding: 8px 12px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin: 10px auto;
+    display: block;
+    box-sizing: border-box;
+}
+
