--- a/bookings/static/css/styles.css
+++ b/bookings/static/css/styles.css
@@ -17,7 +17,25 @@ html, body {
     height: 50vh;
     color: white;
     text-align: center;
+    
 }
+
+.content-wrapper-register {
+  flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+    color: white;
+    text-align: center;
+}
+
+
+
+
 footer {
     background-color: #212830;
     color: white;
@@ -26,6 +44,12 @@ footer {
     width: 100%;
     position: fixed;
     bottom: 0;
+}
+
+@media (max-width: 768px) {
+  footer {
+    position: static !important;
+  }
 }
 
 
