--- a/bookings/templates/bookings/register.html
+++ b/bookings/templates/bookings/register.html
@@ -1,7 +1,7 @@
 {% extends "bookings/base.html" %}
 
 {% block content %}
-<div class="content-wrapper ">
+<div class="content-wrapper-register">
     <div class=" blackback padding text-center">
     <h2>Register</h2>
     <form method="post" class="padding">
