--- a/bookings/templates/bookings/booking_form.html
+++ b/bookings/templates/bookings/booking_form.html
@@ -8,7 +8,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Submit Booking</button>
+        <button type="submit" class="btn custom-btn">Submit Booking</button>
     </form>
     </div>
 </div>
