--- a/bookings/templates/bookings/booking_confirm_delete.html
+++ b/bookings/templates/bookings/booking_confirm_delete.html
@@ -1,11 +1,15 @@
 {% extends "bookings/base.html" %}
 
 {% block content %}
+<div class="content-wrapper ">
+    <div class=" blackback padding text-center ">
     <h2>Cancel Booking</h2>
-    <p>Are you sure you want to cancel your booking?</p>
+    <p>Are you sure you want to cancel your booking? </p>
     <form method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Yes, Cancel</button>
         <a href="{% url 'booking_list' %}" class="btn btn-secondary">No, Go Back</a>
     </form>
+    </div>
+</div>
 {% endblock %}
