--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -93,7 +93,7 @@ color: #ffffff;
 }
 
 .background-image {
-    background-image: url('/static/images/restaurant11.jpg');
+    background-image: url('../images/restaurant11.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
