--- a/bookings/templates/bookings/base.html
+++ b/bookings/templates/bookings/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
-<body class="background-image">
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center " href="{% url 'home' %}">
@@ -35,8 +35,19 @@
         </div>
     </nav>
     <div class="background-image">
+    {% if messages %}
+  <div class="container mt-3">
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+  </div>
+{% endif %}
+    
     <div class="container mt-4 mb-4">
-        {% block content %}
+         {% block content %}
         {% endblock %}
     </div>
     </div>
