--- a/bookings/templates/bookings/base.html
+++ b/bookings/templates/bookings/base.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand d-flex align-items-center " href="{% url 'home' %}">
@@ -46,13 +46,14 @@
   </div>
 {% endif %}
     
+
     <div class="container mt-4 mb-4">
          {% block content %}
         {% endblock %}
     </div>
     </div>
 
-    <footer class="footer bg-dark text-white">
+    <footer class="footer bg-dark text-white mt-auto">
         <div class="footer-inner">
       
     
