--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,7 +2,7 @@ html, body {
   
     margin: 0;
     display: flex;
-   
+    overflow-x: hidden;
     font-family: 'Georgia', serif;
     color: #2b2b2b;
 }
@@ -98,6 +98,8 @@ color: #ffffff;
     background-repeat: no-repeat;
     min-height: 100vh;
     position: relative;
+    width: 100%;
+    overflow-x: hidden; 
 }
 
 .blackback {
