Rename content wrapper class for restaurant contact page to improve clarity

--- a/bookings/templates/bookings/contact_restaurant.html
+++ b/bookings/templates/bookings/contact_restaurant.html
@@ -1,7 +1,7 @@
 {% extends "bookings/base.html" %}
 
 {% block content %}
-<div class="content-wrapper ">
+<div class="content-wrapper-register ">
     <div class=" blackback padding text-center ">
         <h2 class="mb-3">Contact the Restaurant</h2>
         <p class="mb-4">Select one of your bookings and let us know about any dietary requirements or special needs.</p>
