Update social media links to open in new tab with appropriate attributes

--- a/bookings/templates/bookings/base.html
+++ b/bookings/templates/bookings/base.html
@@ -70,10 +70,18 @@
             </div>
       
             <div class="col-12 col-md-4 text-center text-md-end">
-              <a href="#" class="text-gold me-3"><i class="fab fa-facebook fa-lg"></i></a>
-              <a href="#" class="text-gold me-3"><i class="fab fa-instagram fa-lg"></i></a>
-              <a href="#" class="text-gold me-3"><i class="fab fa-pinterest fa-lg"></i></a>
-              <a href="#" class="text-gold"><i class="fab fa-yelp fa-lg"></i></a>
+                    <a href="https://www.facebook.com" target="_blank" rel="noopener noreferrer" class="text-gold me-3">
+                      <i class="fab fa-facebook fa-lg"></i>
+                    </a>
+                    <a href="https://www.instagram.com" target="_blank" rel="noopener noreferrer" class="text-gold me-3">
+                      <i class="fab fa-instagram fa-lg"></i>
+                    </a>
+                    <a href="https://www.pinterest.com" target="_blank" rel="noopener noreferrer" class="text-gold me-3">
+                      <i class="fab fa-pinterest fa-lg"></i>
+                    </a>
+                    <a href="https://www.yelp.com" target="_blank" rel="noopener noreferrer" class="text-gold me-3">
+                      <i class="fab fa-yelp fa-lg"></i>
+                    </a>
             </div>
       
           </div>
