--- a/bookings/templates/bookings/contact_restaurant.html
+++ b/bookings/templates/bookings/contact_restaurant.html
@@ -1,10 +1,8 @@
 {% extends "bookings/base.html" %}
 
 {% block content %}
-<div class="container py-5">
-  <div class="row justify-content-center">
-    <div class="col-lg-8 col-md-10">
-      <div class="card p-4">
+<div class="content-wrapper-register ">
+    <div class=" blackback padding text-center box-size">
         <h2 class="mb-3 text-center">Contact the Restaurant</h2>
 
         <!-- Booking details -->
@@ -51,8 +49,7 @@
           </div>
         {% endif %}
 
-      </div>
-    </div>
+      
   </div>
 </div>
 {% endblock %}
